// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteContent should render 1`] = `
<div
  className="remoteContent"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;

exports[`RemoteContent should render and have centered props 1`] = `
<div
  className="centered remoteContent"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;
